# my-project

./: CLAUDE.md  README.md
.claude/commands/: ap.md  my-secretary.md  up-check.md  up-verify.md  up.md
.github/workflows/: shellcheck.yml
claude-backup/: README.md  install.sh  restore.sh  run-backup.sh  settings.snippet.json
company/: README.md
company/knowledge/: business.md  tone.md
company/secretary/: secretary.md
docs/: ad-bi-dashboard-guide.md  fable-operating-manual.ja.md  mirror.md  roadmap.md
docs/learnings/: 20260712-launchd-cron-path-not-inherited.md  20260714-checklist-skill-to-executable-gate.md  README.md
fable5-agent-system/: .gitignore  README.md  pyproject.toml
fable5-agent-system/examples/: sns_strategy_agent.py
fable5-agent-system/fable5/: __init__.py  drift.py  llm.py  loop.py  memory.py  models.py  orchestrator.py  router.py  skills.py  state.py  verification.py
fable5-agent-system/tests/: test_loop.py  test_memory.py  test_orchestrator.py  test_router.py  test_skills.py  test_state.py  test_verification.py
second-brain/: README.md  compile.sh  install.sh  lib.sh  lint.sh  new-vault.sh  project-CLAUDE.snippet.md  research.sh  research_memory.py  session-mine.sh  settings.snippet.json  synthesize.sh
second-brain/vault-template/: CLAUDE.md  INDEX.md  README.md
trading-bot/: .env.example  .gitignore  README.md  config.json  gen_sample_data.py  run_backtest.py  run_bot.py
trading-bot/sma_bot/: __init__.py  backtest.py  bot.py  broker.py  config.py  data.py  strategy.py
trading-bot/tests/: test_backtest.py  test_bot.py  (+1 more)
(+21 files in other folders)
