[project]
name = "fable5-agent-system"
version = "0.1.0"
description = "自己改善型AIエージェントシステム — Router / Verification Loop / Memory / Skills / State 管理を Claude API 上に実装"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.116.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fable5*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
